# boring_math

./: CHANGELOG.md  README.md  pyproject.toml
docs/html/grscheller/boring_math/: index.html  integer_math.html
src/grscheller/boring_math/: __init__.py  integer_math.py
