[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "grscheller.boring_math"
authors = [
    { name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = []
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/grscheller/boring_math"
Changelog = "https://github.com/grscheller/boring_math/blob/main/CHANGELOG.md"
Documentation = "https://grscheller.github.io/boring_math/"

[tool.pylsp-mypy]
live-mode = true
strict = false
report_progress = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
